// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptaRugbyMatchStats should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa kzAIuV"
  >
    <div
      class="sc-bxivhb sc-ifAKCX jxdllp"
    />
    <div
      class="sc-bwzfXH eSqyJ"
    >
      Placeholder
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaRugbyMatchStats should render correctly 2`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa kzAIuV"
  >
    <div
      class="sc-bxivhb sc-ifAKCX jxdllp"
    >
      <div>
        Widget
      </div>
    </div>
  </div>
</DocumentFragment>
`;
